<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Seeds_Upload_Activity"
    android:background="@color/backTheme"
    android:padding="@dimen/_12sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/str_seed_data_upload"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold"
                android:fontFamily="@font/josefinsanssemibold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:hint="@string/str_seeds_name"
                app:hintTextColor="@color/black"

                android:layout_marginTop="10dp"


                app:boxStrokeWidth="2dp"


                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:layout_marginTop="8dp"
                    android:id="@+id/seed_name"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:hint="@string/str_description"
                app:hintTextColor="#A653DA"
                app:boxStrokeWidth="2dp"


                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:layout_marginTop="8dp"
                    android:id="@+id/seed_description"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_price"
                app:hintTextColor="#A653DA"
                app:boxStrokeWidth="2dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:layout_marginTop="8dp"
                    android:id="@+id/seed_price"
                    android:inputType="number"
                    />
            </com.google.android.material.textfield.TextInputLayout>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/str_upload_seed_photo"
                android:layout_marginTop="10dp"
                android:textSize="22dp"
                android:gravity="center"
                android:textStyle="bold"
                />

            <ImageView

                android:id="@+id/seed_uploadbtn"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/add_image" />

            <RelativeLayout
                android:id="@+id/seed_relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:visibility="gone"

                >


                <ImageView
                    android:id="@+id/seedImage"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true" />


            </RelativeLayout>

            <Button
                android:id="@+id/seed_upl_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="#CDDC39"
                android:text="@string/str_submit" />



        </LinearLayout>
    </RelativeLayout>

</ScrollView>